SERVER-7028 Move complex initialization (that may trigger page fault exceptions) out of ReplSetConfig and ReplSet constructors.