src/mongo/db/repl/rs_config.h
@@ -47,9 +47,9 @@ namespace mongo {
          * reasons.) If something is misconfigured, throws an exception. If the
          * host couldn't be queried or is just blank, ok() will be false.
          */
-        ReplSetConfig(const HostAndPort& h);
+        static ReplSetConfig* make(const HostAndPort& h);
 
-        ReplSetConfig(BSONObj cfg, bool force=false);
+        static ReplSetConfig* make(BSONObj cfg, bool force=false);
 
         bool ok() const { return _ok; }
 
@@ -153,7 +153,12 @@ namespace mongo {
         int getMajority() const;
 
         bool _constructed;
+
     private:
+        ReplSetConfig();
+        void init(const HostAndPort& h);
+        void init(BSONObj cfg, bool force);
+
         bool _ok;
         int _majority;
 
