src/mongo/db/repl/rs_initiate.cpp
@@ -224,17 +224,18 @@ namespace mongo {
 
             bool parsed = false;
             try {
-                ReplSetConfig newConfig(configObj);
+                scoped_ptr<ReplSetConfig> newConfig(ReplSetConfig::make(configObj));
                 parsed = true;
 
-                if( newConfig.version > 1 ) {
+                if( newConfig->version > 1 ) {
                     errmsg = "can't initiate with a version number greater than 1";
                     return false;
                 }
 
-                log() << "replSet replSetInitiate config object parses ok, " << newConfig.members.size() << " members specified" << rsLog;
+                log() << "replSet replSetInitiate config object parses ok, " <<
+                        newConfig->members.size() << " members specified" << rsLog;
 
-                checkMembersUpForConfigChange(newConfig, result, true);
+                checkMembersUpForConfigChange(*newConfig, result, true);
 
                 log() << "replSet replSetInitiate all members seem up" << rsLog;
 
@@ -242,7 +243,7 @@ namespace mongo {
 
                 Lock::GlobalWrite lk;
                 bo comment = BSON( "msg" << "initiating set");
-                newConfig.saveConfigLocally(comment);
+                newConfig->saveConfigLocally(comment);
                 log() << "replSet replSetInitiate config now saved locally.  Should come online in about a minute." << rsLog;
                 result.append("info", "Config now saved locally.  Should come online in about a minute.");
                 ReplSet::startupStatus = ReplSet::SOON;
