src/mongo/dbtests/replsettests.cpp
@@ -44,15 +44,14 @@ namespace ReplSetTests {
     public:
         static const int replWriterThreadCount;
         static const int replPrefetcherThreadCount;
+        static ReplSetTest* make() {
+            auto_ptr<ReplSetTest> ret(new ReplSetTest());
+            ret->init();
+            return ret.release();
+        }
         virtual ~ReplSetTest() {
             delete _myConfig;
             delete _config;
-        }
-        ReplSetTest() : _syncTail(0) {
-            BSONArrayBuilder members;
-            members.append(BSON("_id" << 0 << "host" << "host1"));
-            _config = new ReplSetConfig(BSON("_id" << "foo" << "members" << members.arr()));
-            _myConfig = new ReplSetConfig::MemberCfg();
         }
         virtual bool isSecondary() {
             return true;
@@ -74,6 +73,16 @@ namespace ReplSetTests {
         }
         void setSyncTail(replset::BackgroundSyncInterface *syncTail) {
             _syncTail = syncTail;
+        }
+    private:
+        ReplSetTest() :
+            _syncTail(0) {
+        }
+        void init() {
+            BSONArrayBuilder members;
+            members.append(BSON("_id" << 0 << "host" << "host1"));
+            _config = ReplSetConfig::make(BSON("_id" << "foo" << "members" << members.arr()));
+            _myConfig = new ReplSetConfig::MemberCfg();
         }
     };
 
@@ -157,7 +166,7 @@ namespace ReplSetTests {
             _tailer = new replset::SyncTail(_bgsync);
 
             // setup theReplSet
-            ReplSetTest *rst = new ReplSetTest();
+            ReplSetTest *rst = ReplSetTest::make();
             rst->setSyncTail(_bgsync);
             delete theReplSet;
             theReplSet = rst;
